画像の拡張子を修正

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <script>
         var img_src = new 
-        Array("img/activity_3.jpg","img/activity_3.jpg","img/activity_3.jpg","img/activity_4.jpg","img/activity_5.jpg");
+        Array("img/activity_1.JPG","img/activity_2.JPG","img/activity_3.jpg","img/activity_4.JPG","img/activity_5.JPG");
         var i = 0;
   
         function change_up() {
