--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <center>
     <h2><font face="游ゴシック Light">Activitys</font></h2>
     <div class="activity">
-    <img id="activity_image"src="img/activity_1.jpg" onclick="change()">
+    <img id="activity_image"src="img/activity_1.JPG" onclick="change()">
     </div>
     </center>
     
