--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <center>
     <h2><font face="游ゴシック Light">Activitys</font></h2>
     <div class="activity">
-    <img id="activity_image"src="img/activity_1.JPG" onclick="change()">
+    <img id="activity_image"src="img/activity_1.jpg" onclick="change()">
     </div>
     </center>
     
@@ -43,7 +43,7 @@
     </section>
     <script>
         var img_src = new 
-        Array("img/activity_1.JPG","img/activity_2.JPG","img/activity_3.jpg","img/activity_4.JPG","img/activity_5.JPG");
+        Array("img/activity_1.jpg","img/activity_2.JPG","img/activity_3.jpg","img/activity_4.JPG","img/activity_5.JPG");
         var i = 0;
   
         function change_up() {
