--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
     <section>
     <center>
-    <h2><font face="游ゴシック Light">Activitys</font></h2>
+    <h2>Activitys</h2>
     <div class="activity">
     <img id="activity_image"src="img/activity_1.jpg" onclick="change()">
     </div>
@@ -47,7 +47,7 @@
         </td>
         <td>
             <div class="activity_text">
-                <p id="activity_text"><font face="游ゴシック Light">ロボット製作</font></p>
+                <p id="activity_text">ロボット製作</p>
             </div>
         </td>
         <td>
