--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <hr>
     </left>
   </div>
+  <h2 class="myname">奥西 授</h2>
+  <P class="about_text">初めまして(おくにしさずか)と言います。<br>技術系の分野を中心に色々やってます。
+　<br>
+  <br>立命館守山高校3年GLsコース
+　<br>高校Sci-Tech部部長
+　<br>GENIEメンバー
+　<br>P.S共同代表
+  <br>AEGISキャプテン
+　</P>
+  <div class="about_text">
+  <hr>
+  </div>
     <section>
     <center>
     <h2>Activitys</h2>
@@ -58,6 +70,24 @@
         </tr>
     </table>
     </section>
+    <div class="about_text">
+        <hr>
+    </div>
+    
+    <section>
+    <center>
+        <h2>Careers</h2>
+    </center>
+    </section>
+    <div class="about_text">
+        <hr>
+    </div>
+    <section>
+    <center>
+        <h2>Links</h2>
+    </center>
+    </section>
+    
     <script>
         var img_src = new 
         Array("img/activity_1.jpg","img/activity_2.JPG","img/activity_3.jpg","img/activity_4.JPG","img/activity_5.JPG");
@@ -136,7 +166,7 @@
             //idがkeyvisualの要素を取得
         let elem = document.getElementById('main-visual');
         //現在のスクロール位置を取得して、10で除算
-        let scrollY = window.scrollY/30;
+        let scrollY = window.scrollY/25;
             //上で取得した値と画像幅を加算して、elemの背景サイズに設定
         elem.style.backgroundSize = 100 + scrollY + '%';
 });
