--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </td>
       </left>
       <td class="top_nav">
-        <ul>
-            <li class="top_nav_text">Activitys</li> 
+        <ul class="top_nav_text">
+            <li>Activitys</li> 
             <br>
-            <li class="top_nav_text">Careers</li>
+            <li>Careers</li>
             <br>
-            <li class="top_nav_text">Links</li>
+            <li>Links</li>
             <br>
-            <li class="top_nav_text">Contacts</li>
+            <li>Contacts</li>
         </ul>
       </td>
      </tr>
