add next buttom

--- a/activity.html
+++ b/activity.html
@@ -7,11 +7,11 @@
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
   <title>Sazuka Okunishi Profile</title>
-  <script>
-  </script>
+  
   <meta />
 </head>
 <body>
+    
 <div class="nav_table">
  <table align="left">
   <tr>
@@ -49,7 +49,58 @@
    </td>   
   </tr>
  </table>
- <!--<p class="test"></p>-->
 </div>
-　
+<div class="nav_table">
+ <table align="left">
+  <tr>
+   <td class="nav_tab_next">  
+   </td>
+   <td valign="top" class="activity_tab_next">
+    <center>
+        <a href="activity.html#target" ><img src="img/activity_scroll.svg"></a>
+    </center>
+   </td>   
+  </tr>
+ </table>
+</div>
+<div class="nav_table">
+    <table align="left" id="target">
+     <tr>
+      <td class="nav_tab">  
+        <li class="page_nav"><a href="index.html">HOME</a></li>
+        <br>
+        <li class="page_nav">CAREERS</li>
+        <br>
+        <li class="page_nav">LINKS</li>
+        <br>
+        <li class="page_nav">CONTACTS</li>   
+       </ul>
+      </td>
+      <td valign="top" class="activity_tab">
+        <img class="activity_img" src="img/activity_1_a.jpg">
+        <p class="activity_title">ロボット制作</p>
+        <hr>
+        <br>
+        <img class="activity_detail_img" src="img/activity_robot.jpg">
+        <p class="activity_detail">
+            小学校の頃から電子工作に興味を持ちロボカップジュニアという自立型のロボットが様々な
+            競技を行う大会に出場しています。中学校の頃は関西ブロック、高校の頃は京滋奈ブロックからサッカーライトウエイト
+            に参加していました。<br>
+            高校時代の成績<br>
+            ロボカップジュニア2020
+            京都ノード敗退<br>
+            ロボカップジュニア2021
+            京滋奈ブロック4位<br>
+            ロボカップジュニア2022
+            京滋奈ブロック1位<br>
+             またロボカップでロボットを制作する過程で得たCADの知識を使ってFusion360で鉄道車両を
+            モデリングしたりしています。
+        </p>
+   
+      </td>   
+     </tr>
+    </table>
+   </div>
+   <script>
 </body>
+</html>
