--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </left>
       <td class="top_nav">
         <ul class="top_nav_text">
-            <li>Activitys</li> 
+            <li><a href="activity.html">Activitys</a></li> 
             <br>
             <li>Careers</li>
             <br>
