--- a/activity.html
+++ b/activity.html
@@ -87,7 +87,12 @@
         <br>
         <img class="activity_detail_img" src="img/activity_ps.jpg">
         <p class="activity_detail">
-            
+            高校1年生の時にキャリア甲子園に参加したのをきっかけに
+            高校生4人でGENIEを結成し様々なビジネスコンテストに参加してきました。<br>
+            コロナ禍が拡大しコンテストが軒並み中止になったときは自分たちでコンテストを主催しました。<br>
+            高校2年時からはP.Sという別の学生団体にも参加し主にイベント事業を手掛けています。<br>
+            高校3年の冬にP.Sのメンバー2人と「自分たちが受けてきた経験をもっと沢山の人に届けたい」というコンセプトで
+            「探究留学」というプランを総長ピッチチャレンジ2021で提案し総長賞を受賞しました。
         </p>
    
       </td>   
@@ -108,7 +113,83 @@
        </ul>
       </td>
       <td valign="top" class="activity_tab">
-        <img class="activity_img" src="img/activity_2_a.jpg">
+        <img class="activity_img" src="img/activity_3_a_s.jpg">
+        <p class="activity_title">事業関連</p>
+        <hr>
+        <br>
+        <img class="activity_detail_img" src="img/activity_ps.jpg">
+        <p class="activity_detail">
+            小学校の頃から電子工作に興味を持ちロボカップジュニアという自立型のロボットが様々な
+            競技を行う大会に出場しています。中学校の頃は関西ブロック、高校の頃は京滋奈ブロックからサッカーライトウエイト
+            に参加していました。<br>
+            高校時代の成績<br>
+            ロボカップジュニア2020
+            京都ノード敗退<br>
+            ロボカップジュニア2021
+            京滋奈ブロック4位<br>
+            ロボカップジュニア2022
+            京滋奈ブロック1位<br>
+             またロボカップでロボットを制作する過程で得たCADの知識を使ってFusion360で鉄道車両を
+            モデリングしたりしています。
+        </p>
+   
+      </td>   
+     </tr>
+    </table>
+</section>
+<section id="box3" class="box">
+    <table align="left" id="target">
+     <tr>
+      <td class="nav_tab">  
+        <li class="page_nav"><a href="index.html">HOME</a></li>
+        <br>
+        <li class="page_nav">CAREERS</li>
+        <br>
+        <li class="page_nav">LINKS</li>
+        <br>
+        <li class="page_nav">CONTACTS</li>   
+       </ul>
+      </td>
+      <td valign="top" class="activity_tab">
+        <img class="activity_img" src="img/activity_3_a_s.jpg">
+        <p class="activity_title">事業関連</p>
+        <hr>
+        <br>
+        <img class="activity_detail_img" src="img/activity_ps.jpg">
+        <p class="activity_detail">
+            小学校の頃から電子工作に興味を持ちロボカップジュニアという自立型のロボットが様々な
+            競技を行う大会に出場しています。中学校の頃は関西ブロック、高校の頃は京滋奈ブロックからサッカーライトウエイト
+            に参加していました。<br>
+            高校時代の成績<br>
+            ロボカップジュニア2020
+            京都ノード敗退<br>
+            ロボカップジュニア2021
+            京滋奈ブロック4位<br>
+            ロボカップジュニア2022
+            京滋奈ブロック1位<br>
+             またロボカップでロボットを制作する過程で得たCADの知識を使ってFusion360で鉄道車両を
+            モデリングしたりしています。
+        </p>
+   
+      </td>   
+     </tr>
+    </table>
+</section>
+<section id="box3" class="box">
+    <table align="left" id="target">
+     <tr>
+      <td class="nav_tab">  
+        <li class="page_nav"><a href="index.html">HOME</a></li>
+        <br>
+        <li class="page_nav">CAREERS</li>
+        <br>
+        <li class="page_nav">LINKS</li>
+        <br>
+        <li class="page_nav">CONTACTS</li>   
+       </ul>
+      </td>
+      <td valign="top" class="activity_tab">
+        <img class="activity_img" src="img/activity_3_a_s.jpg">
         <p class="activity_title">事業関連</p>
         <hr>
         <br>
