add activity section

--- a/activity.html
+++ b/activity.html
@@ -17,7 +17,7 @@
 <body id="activity_body">
     
 <section id="box1" class="box">
- <table align="left" border="1">
+ <table align="left" border="0">
   <tr>
    <td class="nav_tab">  
      <li class="page_nav"><a href="index.html">HOME</a></li>
@@ -114,23 +114,15 @@
       </td>
       <td valign="top" class="activity_tab">
         <img class="activity_img" src="img/activity_3_a_s.jpg">
-        <p class="activity_title">事業関連</p>
+        <p class="activity_title">フォトグラフ</p>
         <hr>
         <br>
-        <img class="activity_detail_img" src="img/activity_ps.jpg">
+        <img class="activity_detail_img_p1" src="img/activity_photo_1.jpg">
+        <img class="activity_detail_img_p2" src="img/activity_photo_2.jpg">
+        <img class="activity_detail_img_p3" src="img/activity_photo_3.jpg">
         <p class="activity_detail">
-            小学校の頃から電子工作に興味を持ちロボカップジュニアという自立型のロボットが様々な
-            競技を行う大会に出場しています。中学校の頃は関西ブロック、高校の頃は京滋奈ブロックからサッカーライトウエイト
-            に参加していました。<br>
-            高校時代の成績<br>
-            ロボカップジュニア2020
-            京都ノード敗退<br>
-            ロボカップジュニア2021
-            京滋奈ブロック4位<br>
-            ロボカップジュニア2022
-            京滋奈ブロック1位<br>
-             またロボカップでロボットを制作する過程で得たCADの知識を使ってFusion360で鉄道車両を
-            モデリングしたりしています。
+           趣味程度ですが中学生の頃に買ってもらったD3300で主に鉄道写真を、時々依頼されて人物写真を撮ってます。
+           月に数回はカメラを片手に被写体を求めて走りまわっています。
         </p>
    
       </td>   
@@ -151,24 +143,19 @@
        </ul>
       </td>
       <td valign="top" class="activity_tab">
-        <img class="activity_img" src="img/activity_3_a_s.jpg">
-        <p class="activity_title">事業関連</p>
+        <img class="activity_img" src="img/activity_4_a_s.jpg">
+        <p class="activity_title">Web app</p>
         <hr>
         <br>
-        <img class="activity_detail_img" src="img/activity_ps.jpg">
+        <img class="activity_detail_img" src="img/activity_webapp.png">
         <p class="activity_detail">
-            小学校の頃から電子工作に興味を持ちロボカップジュニアという自立型のロボットが様々な
-            競技を行う大会に出場しています。中学校の頃は関西ブロック、高校の頃は京滋奈ブロックからサッカーライトウエイト
-            に参加していました。<br>
-            高校時代の成績<br>
-            ロボカップジュニア2020
-            京都ノード敗退<br>
-            ロボカップジュニア2021
-            京滋奈ブロック4位<br>
-            ロボカップジュニア2022
-            京滋奈ブロック1位<br>
-             またロボカップでロボットを制作する過程で得たCADの知識を使ってFusion360で鉄道車両を
-            モデリングしたりしています。
+           主に事業関連でWEB関連が必要になったときにHTMLやCSS、javascriptを用いて、
+           webサイトやwebサービスを制作し、ビジネスアイデアの実施に貢献しています。<br>
+           総長ピッチチャレンジ2020及び、守山キャリアチャレンジ2020でTOTBという
+           webサービスを作成しました。<br>また2021年5月のオンライン授業の期間はZOOMCONECTERという
+           IDやPWなしで開講中の授業に入れるシステムを作成し
+           8000回を超えるアクセスを獲得しました。<br>
+           それ以外にもGithub Pagesを使って趣味程度に所属団体のWEBサイトの構築及び公開もしています。
         </p>
    
       </td>   
