--- a/activity.html
+++ b/activity.html
@@ -22,7 +22,7 @@
    <td class="nav_tab">  
      <li class="page_nav"><a href="index.html">HOME</a></li>
      <br>
-     <li class="page_nav">CAREERS</li>
+     <li class="page_nav">HISTORYS</li>
      <br>
      <li class="page_nav">LINKS</li>
      <br>
@@ -73,7 +73,7 @@
       <td class="nav_tab">  
         <li class="page_nav"><a href="index.html">HOME</a></li>
         <br>
-        <li class="page_nav">CAREERS</li>
+        <li class="page_nav">HISTORYS</li>
         <br>
         <li class="page_nav">LINKS</li>
         <br>
@@ -105,7 +105,7 @@
       <td class="nav_tab">  
         <li class="page_nav"><a href="index.html">HOME</a></li>
         <br>
-        <li class="page_nav">CAREERS</li>
+        <li class="page_nav">HISTORYS</li>
         <br>
         <li class="page_nav">LINKS</li>
         <br>
@@ -135,7 +135,7 @@
       <td class="nav_tab">  
         <li class="page_nav"><a href="index.html">HOME</a></li>
         <br>
-        <li class="page_nav">CAREERS</li>
+        <li class="page_nav">HISTORYS</li>
         <br>
         <li class="page_nav">LINKS</li>
         <br>
@@ -168,7 +168,7 @@
       <td class="nav_tab">  
         <li class="page_nav"><a href="index.html">HOME</a></li>
         <br>
-        <li class="page_nav">CAREERS</li>
+        <li class="page_nav">HISTORYS</li>
         <br>
         <li class="page_nav">LINKS</li>
         <br>
