--- a/history.html
+++ b/history.html
@@ -56,6 +56,7 @@
     <p class="history_detail"><b>2020年4月</b></p>
     <ul>
      <li class="history_detail_sub">新型コロナウイルスの感染拡大により高校が休校になる</li>
+     <li class="history_detail_sub">アカデメイアコースからグローバルサイエンスコースに転科</li>
     </ul>
     <p class="history_detail"><b>2020年5月</b></p>
     <ul>
@@ -103,6 +104,78 @@
     <ul>
      <li class="history_detail_sub">文化祭でプロジェクト長を務める</li>
      <li class="history_detail_sub">STEAM JAPAN AWARD 2020にてシルバー賞を受賞</li>
+    </ul>
+    <p class="history_detail"><b>2020年12月</b></p>
+    <ul>
+     <li class="history_detail_sub">学校説明会登壇</li>
+     <li class="history_detail_sub">総長ピッチチャレンジ2020ファイナルセッション参加</li>
+     <li class="history_detail_sub">守山キャリアチャレンジ参加</li>
+    </ul>
+    <p class="history_detail"><b>2021年1月</b></p>
+    <ul>
+     <li class="history_detail_sub">ロボカップジュニア2021京滋奈ブロック4位</li>
+     <li class="history_detail_sub">琵琶湖ピッチ参加</li>
+    </ul>
+    <p class="history_detail"><b>2021年2月</b></p>
+    <ul>
+     <li class="history_detail_sub">キャリア甲子園2020準決勝に進出</li>
+    </ul>
+    <p class="history_detail"><b>2021年3月</b></p>
+    <ul>
+     <li class="history_detail_sub">SAPに登壇(P.SとGENIE)</li>
+     <li class="history_detail_sub">大阪大学SEEDS体感コース修了</li>
+     <li class="history_detail_sub">Global Enterprise Challenge 2021参加</li>
+    </ul>
+    <p class="history_detail"><b>2021年4月</b></p>
+    <ul>
+     <li class="history_detail_sub">新入生歓迎会にて講演</li>
+     <li class="history_detail_sub">ZOOMCONECTER開発</li>
+    </ul>
+    <p class="history_detail"><b>2021年6月</b></p>
+    <ul>
+     <li class="history_detail_sub">学校説明会に登壇</li>
+     <li class="history_detail_sub">バドミントン部引退</li>
+    </ul>
+    <p class="history_detail"><b>2021年7月</b></p>
+    <ul>
+     <li class="history_detail_sub">SSAP参加(2回目)</li>
+     <li class="history_detail_sub">守山キャリアチャレンジ参加</li>
+    </ul>
+    <p class="history_detail"><b>2021年8月</b></p>
+    <ul>
+     <li class="history_detail_sub">琵琶湖ピッチにて旭化成賞を受賞</li>
+     <li class="history_detail_sub">琵琶湖ピッチにて平和堂賞を受賞</li>
+    </ul>
+    <p class="history_detail"><b>2021年9月</b></p>
+    <ul>
+     <li class="history_detail_sub">Tech Lake Sprint参加</li>
+    </ul>
+    <p class="history_detail"><b>2021年10月</b></p>
+    <ul>
+     <li class="history_detail_sub">総長ピッチチャレンジオーディションを通過</li>
+     <li class="history_detail_sub">学校説明会に登壇</li>
+    </ul>
+    <p class="history_detail"><b>2021年11月</b></p>
+    <ul>
+     <li class="history_detail_sub">Youth CoLab2次選考通過</li>
+     <li class="history_detail_sub">探究留学の件で熊本県多良木町に訪問</li>
+    </ul>
+    <p class="history_detail"><b>2021年12月</b></p>
+    <ul>
+     <li class="history_detail_sub">総長ピッチチャレンジ2021ファイナルセッションで総長賞を獲得</li>
+    </ul>
+    <p class="history_detail"><b>2022年1月</b></p>
+    <ul>
+     <li class="history_detail_sub">ロボカップジュニア2022 京都ノードサッカーライトウエイト準優勝</li>
+     <li class="history_detail_sub">ロボカップジュニア2022 京滋奈ブロックサッカーライトウエイト優勝</li>
+    </ul>
+    <p class="history_detail"><b>2022年2月</b></p>
+    <ul>
+     <li class="history_detail_sub">SAPに登壇</li>
+    </ul>
+    <p class="history_detail"><b>2022年3月</b></p>
+    <ul>
+     <li class="history_detail_sub">守山市広報誌に掲載(予定)</li>
     </ul>
   </body>
   </html>
