--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
     <section>
     <center>
-        <h2>Historys</h2>
+        <h2><a href="history.html"class="mainlink">Historys</a></h2>
     </center>
     </section>
     <div class="about_text">
