--- a/history.html
+++ b/history.html
@@ -18,7 +18,7 @@
               <li class="header_item"><a href="index.html">HOME</a></li>
               <li class="header_item"><a href="activity.html">ACTIVITY</a></li>
               <li class="header_item"><a href="#">HISTORY</a></li>
-              <li class="header_item"><a href="#">LINK</a></li>
+              <li class="header_item"><a href="link.html">LINK</a></li>
               <li class="header_item"><a href="#">CONTACT</a></li>
             </ul>
           </nav>
@@ -177,5 +177,6 @@
     <ul>
      <li class="history_detail_sub">守山市広報誌に掲載(予定)</li>
     </ul>
+    
   </body>
   </html>
