--- a/link.html
+++ b/link.html
@@ -9,6 +9,7 @@
   <title>Sazuka Okunishi Profile</title>
   
   <meta />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body link="white" vlink="white">
     <header>
@@ -34,5 +35,57 @@
     <p class="history_detail_sub"><a href="http://www.ritsumei.ac.jp/mrc/">立命館守山高校ホームページ</a></p>
     <p class="history_detail_sub"><a href="https://ritsscitech.tumblr.com">高校Sci－Tech部公式ブログ</a></p>
     <p class="history_detail_sub"><a href="https://impact-rits.github.io/bc.contest/">ビヨンド・コロナ・コンテスト特設ページ</a></p>
-    </body>
+    <center>
+      <footer>
+          &copy; Okunishi 2022
+      </footer>
+      </center>
+  <script>
+      $(function(){
+   
+   $(window).on('load scroll', function(){
+         //現時点のスクロールの高さ取得
+    var scrollPosition = $(window).scrollTop();
+    //ウィンドウの高さ取得
+    var windowHeight = $(window).height();
+  
+   $('.history_detail').each(function(){
+        //要素の位置（高さ）を取得
+       var elemPosition = $(this).offset().top;
+        //スクロールの高さが要素の位置を超えたら以下のスタイルを適用
+     if(elemPosition < scrollPosition + windowHeight){
+      $(this).css({
+       opacity: 1,
+       transform: 'translateY(0)'
+      });
+     }
+   });
+   $('.history_detail_sub').each(function(){
+        //要素の位置（高さ）を取得
+       var elemPosition = $(this).offset().top;
+        //スクロールの高さが要素の位置を超えたら以下のスタイルを適用
+     if(elemPosition < scrollPosition + windowHeight){
+      $(this).css({
+       opacity: 1,
+       transform: 'translateX(0)'
+      });
+     }
+   });
+   $('.history_title').each(function(){
+        //要素の位置（高さ）を取得
+       var elemPosition = $(this).offset().top;
+        //スクロールの高さが要素の位置を超えたら以下のスタイルを適用
+     if(elemPosition < scrollPosition + windowHeight){
+      $(this).css({
+       opacity: 1,
+       transform: 'translateX(0)'
+      });
+     }
+   });
+  });
+  
+  });
+  </script>  
+  </body>
+    
     </html>
