--- a/history.html
+++ b/history.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css" media="screen and (min-width: 480px)">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
   <title>Sazuka Okunishi Profile</title>
@@ -28,7 +29,7 @@
     <p class="history_title_1">略歴(Histories)</p>
     <p class="history_detail"><b>2019年3月</b></p>
     <ul>
-     <li class="history_detail_sub">中学校卒業</li>
+     <li class="test">中学校卒業</li>
     </ul>
     <p class="history_detail"><b>2019年4月</b></p>
     <ul>
@@ -214,7 +215,7 @@
       });
      }
    });
-   $('.history_title').each(function(){
+   $('.test').each(function(){
         //要素の位置（高さ）を取得
        var elemPosition = $(this).offset().top;
         //スクロールの高さが要素の位置を超えたら以下のスタイルを適用
@@ -228,6 +229,7 @@
   });
   
   });
+  
   </script>  
   </body>
   </html>
