--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/style.css">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="CSS/style.css" media="screen and (min-width: 480px)">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
   <title>Sazuka Okunishi Profile</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <meta />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body link="white" vlink="white">
   <!--<div class="main-visual" id="main-visual">
@@ -96,7 +96,7 @@
     </div>
     <section>
     <center>
-        <h2><a href="history.html"class="mainlink">Link</a></h2>
+        <h2><a href="link.html"class="mainlink">Link</a></h2>
         <p class="top_text">各種リンクについてまとめています</p>
     </center>
     </section>
@@ -187,7 +187,7 @@
             
             
         } 
-        if (window.innerWidth > 800){
+        if (window.innerWidth > 821){
         window.addEventListener('scroll', () => {
             //idがkeyvisualの要素を取得
         let elem = document.getElementById('main-visual');
