--- a/history.html
+++ b/history.html
@@ -29,7 +29,7 @@
     <p class="history_title_1">略歴(Histories)</p>
     <p class="history_detail"><b>2019年3月</b></p>
     <ul>
-     <li class="test">中学校卒業</li>
+     <li class="history_detail_sub">中学校卒業</li>
     </ul>
     <p class="history_detail"><b>2019年4月</b></p>
     <ul>
